lib/bridges/screengot_binding.dart


  late final _CaptureScreenSavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CaptureScreenSave');
  late final _CaptureScreenSave =
      _CaptureScreenSavePtr.asFunction<
        void Function(int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void CaptureScreenBase64(int x, int y, int w, int h, int port) {
    return _CaptureScreenBase64(x, y, w, h, port);
  }

  late final _CaptureScreenBase64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('CaptureScreenBase64');
  late final _CaptureScreenBase64 =
      _CaptureScreenBase64Ptr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void DisplaysNum(int port) {
    return _DisplaysNum(port);
  }

  late final _DisplaysNumPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'DisplaysNum',
      );
  late final _DisplaysNum = _DisplaysNumPtr.asFunction<void Function(int)>();

  void GetDisplayBounds(int index, int port) {
    return _GetDisplayBounds(index, port);
  }

  late final _GetDisplayBoundsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'GetDisplayBounds',
      );
  late final _GetDisplayBounds =
      _GetDisplayBoundsPtr.asFunction<void Function(int, int)>();

  void CaptureDisplaySave(int index, ffi.Pointer<ffi.Char> path, int port) {
    return _CaptureDisplaySave(index, path, port);
  }

  late final _CaptureDisplaySavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('CaptureDisplaySave');
  late final _CaptureDisplaySave =
      _CaptureDisplaySavePtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Char>, int)
      >();

  void CaptureDisplayRegionSave(
    int index,
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _CaptureDisplayRegionSave(index, x, y, w, h, path, port);
  }

  late final _CaptureDisplayRegionSavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CaptureDisplayRegionSave');
  late final _CaptureDisplayRegionSave =
      _CaptureDisplayRegionSavePtr.asFunction<
        void Function(int, int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void SaveImageJpeg(ffi.Pointer<ffi.Char> path, int quality, int port) {
    return _SaveImageJpeg(path, quality, port);
  }

  late final _SaveImageJpegPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.LongLong)
        >
      >('SaveImageJpeg');
  late final _SaveImageJpeg =
      _SaveImageJpegPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  void SaveImagePNGFromCaptureImg(ffi.Pointer<ffi.Char> path, int port) {
    return _SaveImagePNGFromCaptureImg(path, port);
  }

  late final _SaveImagePNGFromCaptureImgPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('SaveImagePNGFromCaptureImg');
  late final _SaveImagePNGFromCaptureImg =
      _SaveImagePNGFromCaptureImgPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void CaptureScreenBitmapSave(
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _CaptureScreenBitmapSave(x, y, w, h, path, port);
  }

  late final _CaptureScreenBitmapSavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CaptureScreenBitmapSave');
  late final _CaptureScreenBitmapSave =
      _CaptureScreenBitmapSavePtr.asFunction<
        void Function(int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void FindBitmapFromCapture(int x, int y, int w, int h, int port) {
    return _FindBitmapFromCapture(x, y, w, h, port);
  }

  late final _FindBitmapFromCapturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('FindBitmapFromCapture');
  late final _FindBitmapFromCapture =
      _FindBitmapFromCapturePtr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void FindAllBitmapFromCapture(int x, int y, int w, int h, int port) {
    return _FindAllBitmapFromCapture(x, y, w, h, port);
  }

  late final _FindAllBitmapFromCapturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('FindAllBitmapFromCapture');
  late final _FindAllBitmapFromCapture =
      _FindAllBitmapFromCapturePtr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void MoveToFoundBitmap(int x, int y, int w, int h, int port) {
    return _MoveToFoundBitmap(x, y, w, h, port);
  }

  late final _MoveToFoundBitmapPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('MoveToFoundBitmap');
  late final _MoveToFoundBitmap =
      _MoveToFoundBitmapPtr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void SaveBitmapToFile(
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _SaveBitmapToFile(x, y, w, h, path, port);
  }

  late final _SaveBitmapToFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('SaveBitmapToFile');
  late final _SaveBitmapToFile =
      _SaveBitmapToFilePtr.asFunction<
        void Function(int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void SaveCaptureRegion(
    ffi.Pointer<ffi.Char> path,
    int x,
    int y,
    int w,
    int h,
    int port,
  ) {
    return _SaveCaptureRegion(path, x, y, w, h, port);
  }

  late final _SaveCaptureRegionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.LongLong,
          )
        >
      >('SaveCaptureRegion');
  late final _SaveCaptureRegion =
      _SaveCaptureRegionPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int, int, int, int)
      >();

  void SaveCaptureFull(ffi.Pointer<ffi.Char> path, int port) {
    return _SaveCaptureFull(path, port);
  }

  late final _SaveCaptureFullPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('SaveCaptureFull');
  late final _SaveCaptureFull =
      _SaveCaptureFullPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void GcvFindAllImgFile(
    ffi.Pointer<ffi.Char> templatePath,
    ffi.Pointer<ffi.Char> targetPath,
    int port,
  ) {
    return _GcvFindAllImgFile(templatePath, targetPath, port);
  }

  late final _GcvFindAllImgFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('GcvFindAllImgFile');
  late final _GcvFindAllImgFile =
      _GcvFindAllImgFilePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void GcvFindAllImgFilesDecoded(
    ffi.Pointer<ffi.Char> templatePath,
    ffi.Pointer<ffi.Char> targetPath,
    int port,
  ) {
    return _GcvFindAllImgFilesDecoded(templatePath, targetPath, port);
  }

  late final _GcvFindAllImgFilesDecodedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('GcvFindAllImgFilesDecoded');
  late final _GcvFindAllImgFilesDecoded =
      _GcvFindAllImgFilesDecodedPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void GcvFindXFromFile(
    ffi.Pointer<ffi.Char> templatePath,
    ffi.Pointer<ffi.Char> targetPath,
    int port,
  ) {
    return _GcvFindXFromFile(templatePath, targetPath, port);
  }

  late final _GcvFindXFromFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('GcvFindXFromFile');
  late final _GcvFindXFromFile =
      _GcvFindXFromFilePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void BitmapOpenFind(ffi.Pointer<ffi.Char> path, int port) {
    return _BitmapOpenFind(path, port);
  }

  late final _BitmapOpenFindPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('BitmapOpenFind');
  late final _BitmapOpenFind =
      _BitmapOpenFindPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void BitmapFindAllFromFile(ffi.Pointer<ffi.Char> path, int port) {
    return _BitmapFindAllFromFile(path, port);
  }

  late final _BitmapFindAllFromFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('BitmapFindAllFromFile');
  late final _BitmapFindAllFromFile =
      _BitmapFindAllFromFilePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void MoveToFoundFromFile(ffi.Pointer<ffi.Char> path, int port) {
    return _MoveToFoundFromFile(path, port);
  }

  late final _MoveToFoundFromFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('MoveToFoundFromFile');
  late final _MoveToFoundFromFile =
      _MoveToFoundFromFilePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void HookRegisterCombo(
    ffi.Pointer<ffi.Char> mods,
    ffi.Pointer<ffi.Char> key,
    int port,
  ) {
    return _HookRegisterCombo(mods, key, port);
  }

  late final _HookRegisterComboPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('HookRegisterCombo');
  late final _HookRegisterCombo =
      _HookRegisterComboPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void HookStart(int port) {
    return _HookStart(port);
  }

  late final _HookStartPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>('HookStart');
  late final _HookStart = _HookStartPtr.asFunction<void Function(int)>();

  void HookStop() {
    return _HookStop();
  }

  late final _HookStopPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'HookStop',
  );
  late final _HookStop = _HookStopPtr.asFunction<void Function()>();

  void HookAddEvent(ffi.Pointer<ffi.Char> name, int port) {
    return _HookAddEvent(name, port);
  }
